# HexSpam

./: CMakeLists.txt  README.md  main.cpp
main/: mainwindow.cpp  tdapp.cpp
main/include/: mainwindow.h  tdapp.h
src/: authinput.cpp  core.cpp
src/include/: authinput.h  core.h
